--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: jekyll-theme-tactile
 plugins:
   - jekyll-feed
 
