--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url: "https://rshom.github.io" # the base hostname & protocol for your site, e.g
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: jekyll-theme-dinky
 plugins:
   - jekyll-feed
 
